# nanogpt-rs

./: Cargo.toml
src/: main.rs
test_data/: test_manifold.parquet  test_sparse.parquet
